src/snapshots/matchbox__test__basic-2.snap
---
source: src/test.rs
expression: "snapshot! { match () { mb!(&**(mb!(&**x),)) => {} } }"
---
fn main() {
    match () {
        a1 if {
            #[allow(unused_variables)]
            if let (a0,) = &**a1 {
                if let x = &**a0 { true } else { false }
            } else {
                false
            }
        } => {
            if let (a0,) = &**a1 {
                if let x = &**a0 {
                    {}
                } else {
                    panic!(
                        "Two invocations of Deref::deref returned different outputs on same inputs",
                    )
                }
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
    }
}
