src/snapshots/matchbox__test__basic-3.snap
---
source: src/test.rs
expression: "snapshot!\n{\n    match ()\n    {\n        deref!((deref!((deref!(x),)), deref!(y))) => {} Deref @\n        (Deref @ (Deref @ x,), Deref @ y) => {}\n    }\n}"
---
fn main() {
    match () {
        a0 if {
            #[allow(unused_variables)]
            if let (a1, a2) = &**a0 {
                if let (a3,) = &**a1 {
                    if let y = &**a2 {
                        if let x = &**a3 { true } else { false }
                    } else {
                        false
                    }
                } else {
                    false
                }
            } else {
                false
            }
        } => {
            if let (a1, a2) = &**a0 {
                if let (a3,) = &**a1 {
                    if let y = &**a2 {
                        if let x = &**a3 {
                            {}
                        } else {
                            panic!(
                                "Two invocations of Deref::deref returned different outputs on same inputs",
                            )
                        }
                    } else {
                        panic!(
                            "Two invocations of Deref::deref returned different outputs on same inputs",
                        )
                    }
                } else {
                    panic!(
                        "Two invocations of Deref::deref returned different outputs on same inputs",
                    )
                }
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
        a0 if {
            #[allow(unused_variables)]
            if let (a1, a2) = &**a0 {
                if let (a3,) = &**a1 {
                    if let y = &**a2 {
                        if let x = &**a3 { true } else { false }
                    } else {
                        false
                    }
                } else {
                    false
                }
            } else {
                false
            }
        } => {
            if let (a1, a2) = &**a0 {
                if let (a3,) = &**a1 {
                    if let y = &**a2 {
                        if let x = &**a3 {
                            {}
                        } else {
                            panic!(
                                "Two invocations of Deref::deref returned different outputs on same inputs",
                            )
                        }
                    } else {
                        panic!(
                            "Two invocations of Deref::deref returned different outputs on same inputs",
                        )
                    }
                } else {
                    panic!(
                        "Two invocations of Deref::deref returned different outputs on same inputs",
                    )
                }
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
    }
}
