src/snapshots/matchbox__test__bindings.snap
---
source: src/test.rs
expression: "snapshot! { match () { a @ mb!(&**b @ ()) => {}, _ => panic!(), } }"
---
fn main() {
    match () {
        a @ a0 if {
            #[allow(unused_variables)] if let b @ () = &**a0 { true } else { false }
        } => {
            if let b @ () = &**a0 {
                {}
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
        _ => panic!(),
    }
}
